[FORM-CORE] Correção do merge